fix(firefox): Remove outlines from q-focus-target and button on mobile. Use targetTouches (firefox populates touches and changedTouches late). Guard re-entry in mouseStart for touch directives.
close #5334

--- a/ui/src/css/core/visibility.sass
+++ b/ui/src/css/core/visibility.sass
@@ -103,6 +103,9 @@ $platforms: desktop, mobile, native-mobile, cordova, capacitor, electron, touch,
   .xl-hide, .xs, .lt-sm, .sm, .lt-md, .md, .lt-lg, .lg, .lt-xl
     display: none !important
 
+.q-focus-helper
+  outline: 0
+
 body.desktop
   .q-focus-helper
     position: absolute
@@ -112,7 +115,6 @@ body.desktop
     height: 100%
     pointer-events: none
     border-radius: inherit
-    outline: 0
     opacity: 0
     transition: background-color .3s cubic-bezier(.25, .8, .5, 1), opacity .4s cubic-bezier(.25, .8, .5, 1)
 
